ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: opencost
  name: opencost-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
      - opencost.external.com
    secretName: tls-secret
  rules:
  - host: opencost.external.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: opencost
              port:
                name: opencost-ui
